// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SideBar/> Snapshot renders without crashing using mount 1`] = `
<SideBar>
  <styled.div
    onClick={[Function]}
  >
    <div
      className="sc-bqGGPW gKrChu"
      onClick={[Function]}
    />
  </styled.div>
  <styled.div>
    <div
      className="sc-ksluID fQZLob"
    >
      <styled.div>
        <div
          className="sc-hBMUJo jfmbmh"
        >
          <TitledLogo
            onClick={[Function]}
          >
            <styled.a
              href="#home"
              onClick={[Function]}
            >
              <a
                className="sc-fujyAs hogkDK"
                href="#home"
                onClick={[Function]}
              >
                <GiDirewolf
                  size="32"
                >
                  <IconBase
                    attr={
                      Object {
                        "viewBox": "0 0 512 512",
                      }
                    }
                    size="32"
                  >
                    <svg
                      fill="currentColor"
                      height="32"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 512 512"
                      width="32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M145.14 22.185c9.508 36.595 15.32 71.885 14.22 108.31 21.73 18.495 44.074 28.207 68.035 38.93 11.813 5.288 23.99 10.82 36.37 17.69-24.702-70.606-62.676-117.77-118.626-164.93zM27.122 25.887C24.958 45.21 27.53 71.24 34.12 97.38c6.96 18.72 16.942 37.974 27.595 54.67 15.003 23.516 32.422 42.276 40.48 46.868l-9.27 16.244c-14.91-8.496-31.08-28.122-46.978-53.037-9.383-14.708-18.273-31.144-25.328-47.943v196.584l43.17 1.76c-2.8-23.054-4.248-45.878-2.73-66.516l18.614 1.382c-2.313 31.474 3.16 71.293 9.656 108.65 110.615 90.673 195.362 124.516 260.695 131.175l-95.107-66.8 40.053-15.876L152.44 332.58l38.505-1.738c-28.377-14.028-48.9-32.894-63.144-55.63l1.464-22.964c35.81 41.623 89.82 73.71 151.373 98.096l-43.164 6.068 112.765 52.193-22.39 25.518 119.7 42.32c16.61-5.68 31.058-12.678 43.66-19.464-97.364-69.615-123.58-131.642-168.034-193.962l-.008-.01c-34.93-45.653-68.47-60.9-103.4-76.534-33.725-15.094-68.975-30.612-101.788-72.558L27.123 25.887zm156.344 175.59l89.894 46.75-24.032 17.57c18.66 30.458 55.134 55.834 91.12 72.86-50.826-7.884-103.33-32.248-148.212-69.427l29.815-20.224-38.583-47.53z"
                        key="0"
                      />
                    </svg>
                  </IconBase>
                </GiDirewolf>
                <strong>
                  Israel Deorce
                </strong>
              </a>
            </styled.a>
          </TitledLogo>
          <styled.div>
            <div
              className="sc-fnVZcZ qHUSy"
            >
              <ThemeToggle>
                <Toggle
                  className="toggle"
                  icons={
                    Object {
                      "checked": <FaSun />,
                      "unchecked": <FaMoon />,
                    }
                  }
                  onChange={[MockFunction]}
                >
                  <div
                    className="react-toggle toggle"
                    onClick={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="react-toggle-track"
                    >
                      <div
                        className="react-toggle-track-check"
                      >
                        <FaSun>
                          <IconBase
                            attr={
                              Object {
                                "viewBox": "0 0 512 512",
                              }
                            }
                          >
                            <svg
                              fill="currentColor"
                              height="1em"
                              stroke="currentColor"
                              strokeWidth="0"
                              style={
                                Object {
                                  "color": undefined,
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M256 160c-52.9 0-96 43.1-96 96s43.1 96 96 96 96-43.1 96-96-43.1-96-96-96zm246.4 80.5l-94.7-47.3 33.5-100.4c4.5-13.6-8.4-26.5-21.9-21.9l-100.4 33.5-47.4-94.8c-6.4-12.8-24.6-12.8-31 0l-47.3 94.7L92.7 70.8c-13.6-4.5-26.5 8.4-21.9 21.9l33.5 100.4-94.7 47.4c-12.8 6.4-12.8 24.6 0 31l94.7 47.3-33.5 100.5c-4.5 13.6 8.4 26.5 21.9 21.9l100.4-33.5 47.3 94.7c6.4 12.8 24.6 12.8 31 0l47.3-94.7 100.4 33.5c13.6 4.5 26.5-8.4 21.9-21.9l-33.5-100.4 94.7-47.3c13-6.5 13-24.7.2-31.1zm-155.9 106c-49.9 49.9-131.1 49.9-181 0-49.9-49.9-49.9-131.1 0-181 49.9-49.9 131.1-49.9 181 0 49.9 49.9 49.9 131.1 0 181z"
                                key="0"
                              />
                            </svg>
                          </IconBase>
                        </FaSun>
                      </div>
                      <div
                        className="react-toggle-track-x"
                      >
                        <FaMoon>
                          <IconBase
                            attr={
                              Object {
                                "viewBox": "0 0 512 512",
                              }
                            }
                          >
                            <svg
                              fill="currentColor"
                              height="1em"
                              stroke="currentColor"
                              strokeWidth="0"
                              style={
                                Object {
                                  "color": undefined,
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M283.211 512c78.962 0 151.079-35.925 198.857-94.792 7.068-8.708-.639-21.43-11.562-19.35-124.203 23.654-238.262-71.576-238.262-196.954 0-72.222 38.662-138.635 101.498-174.394 9.686-5.512 7.25-20.197-3.756-22.23A258.156 258.156 0 0 0 283.211 0c-141.309 0-256 114.511-256 256 0 141.309 114.511 256 256 256z"
                                key="0"
                              />
                            </svg>
                          </IconBase>
                        </FaMoon>
                      </div>
                    </div>
                    <div
                      className="react-toggle-thumb"
                    />
                    <input
                      className="react-toggle-screenreader-only"
                      onBlur={[Function]}
                      onChange={[MockFunction]}
                      onFocus={[Function]}
                      type="checkbox"
                    />
                  </div>
                </Toggle>
              </ThemeToggle>
              <LanguageSelector>
                <styled.div
                  onClick={[Function]}
                >
                  <div
                    className="sc-gtsrHT efPasq"
                    onClick={[Function]}
                  >
                    <styled.div>
                      <div
                        className="sc-dlnjwi iDwcvG"
                      >
                        en
                        <MdKeyboardArrowDown>
                          <IconBase
                            attr={
                              Object {
                                "viewBox": "0 0 24 24",
                              }
                            }
                          >
                            <svg
                              fill="currentColor"
                              height="1em"
                              stroke="currentColor"
                              strokeWidth="0"
                              style={
                                Object {
                                  "color": undefined,
                                }
                              }
                              viewBox="0 0 24 24"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
                                key="0"
                              />
                            </svg>
                          </IconBase>
                        </MdKeyboardArrowDown>
                      </div>
                    </styled.div>
                    <CA
                      className="flag"
                      title="Canada"
                    >
                      <svg
                        className="flag"
                        viewBox="0 0 512 341.3"
                      >
                        <title>
                          Canada
                        </title>
                        <path
                          d="M0 0h512v341.3H0z"
                          fill="#FFF"
                        />
                        <g
                          fill="#D80027"
                        >
                          <path
                            d="M0 0h142v341.3H0zM370 0h142v341.3H370zM306.5 206l50.4-25.2-25.2-12.6V143l-50.4 25.2 25.2-50.4h-25.2L256.1 80l-25.2 37.8h-25.2l25.2 50.4-50.4-25.2v25.2l-25.2 12.6 50.4 25.2-12.6 25.2h50.4V269h25.2v-37.8h50.4z"
                          />
                        </g>
                      </svg>
                    </CA>
                  </div>
                </styled.div>
              </LanguageSelector>
            </div>
          </styled.div>
        </div>
      </styled.div>
      <PortfolioLinks
        onClick={[Function]}
        orientation="vertical"
      >
        <styled.div
          onClick={[Function]}
          orientation="vertical"
        >
          <div
            className="sc-gKAaRy ilUxeO"
            onClick={[Function]}
            orientation="vertical"
          >
            <a
              href="#skills"
            >
              button.skills
            </a>
            <a
              href="#experience"
            >
              button.experience
            </a>
            <a
              href="#sec3"
            >
              button.education
            </a>
            <a
              href="#sec4"
            >
              button.contact
            </a>
          </div>
        </styled.div>
      </PortfolioLinks>
      <ExternalButtons>
        <styled.div>
          <div
            className="sc-bdnxRM jJHyKE"
          >
            <UIButton
              id="blog-button"
              label="button.visit_my_blog"
            >
              <styled.button
                onClick={[Function]}
                secondary={false}
              >
                <button
                  className="sc-pNWdM fsllOu"
                  onClick={[Function]}
                >
                  <span>
                    button.visit_my_blog
                  </span>
                </button>
              </styled.button>
            </UIButton>
            <UIButton
              id="resume-button"
              label="button.resume"
              onClick={[Function]}
              rightIcon={<FaGoogleDrive />}
              secondary={true}
            >
              <styled.button
                onClick={[Function]}
                secondary={true}
              >
                <button
                  className="sc-pNWdM hdQKUA"
                  onClick={[Function]}
                >
                  <span>
                    button.resume
                  </span>
                  <FaGoogleDrive>
                    <IconBase
                      attr={
                        Object {
                          "viewBox": "0 0 512 512",
                        }
                      }
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 512 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M339 314.9L175.4 32h161.2l163.6 282.9H339zm-137.5 23.6L120.9 480h310.5L512 338.5H201.5zM154.1 67.4L0 338.5 80.6 480 237 208.8 154.1 67.4z"
                          key="0"
                        />
                      </svg>
                    </IconBase>
                  </FaGoogleDrive>
                </button>
              </styled.button>
            </UIButton>
          </div>
        </styled.div>
      </ExternalButtons>
      <SocialNetworks>
        <styled.div>
          <div
            className="sc-iCoGMd bRymZA"
          >
            <a
              href="https://wa.me/5551980254545"
              target="_blank"
              title="https://wa.me/5551980254545"
            >
              <FaWhatsapp
                size="46"
              >
                <IconBase
                  attr={
                    Object {
                      "viewBox": "0 0 448 512",
                    }
                  }
                  size="46"
                >
                  <svg
                    fill="currentColor"
                    height="46"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 448 512"
                    width="46"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"
                      key="0"
                    />
                  </svg>
                </IconBase>
              </FaWhatsapp>
            </a>
            <a
              href="https://github.com/IsraelDeorce"
              target="_blank"
              title="https://github.com/IsraelDeorce"
            >
              <FaGithub
                size="46"
              >
                <IconBase
                  attr={
                    Object {
                      "viewBox": "0 0 496 512",
                    }
                  }
                  size="46"
                >
                  <svg
                    fill="currentColor"
                    height="46"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 496 512"
                    width="46"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
                      key="0"
                    />
                  </svg>
                </IconBase>
              </FaGithub>
            </a>
            <a
              href="https://www.linkedin.com/in/israeldeorce"
              target="_blank"
              title="https://www.linkedin.com/in/israeldeorce"
            >
              <FaLinkedin
                size="46"
              >
                <IconBase
                  attr={
                    Object {
                      "viewBox": "0 0 448 512",
                    }
                  }
                  size="46"
                >
                  <svg
                    fill="currentColor"
                    height="46"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 448 512"
                    width="46"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
                      key="0"
                    />
                  </svg>
                </IconBase>
              </FaLinkedin>
            </a>
            <a
              href="mailto: israel.idvj@gmail.com"
              target="_blank"
              title="israel.idvj@gmail.com"
            >
              <FaEnvelope
                size="46"
              >
                <IconBase
                  attr={
                    Object {
                      "viewBox": "0 0 512 512",
                    }
                  }
                  size="46"
                >
                  <svg
                    fill="currentColor"
                    height="46"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 512 512"
                    width="46"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"
                      key="0"
                    />
                  </svg>
                </IconBase>
              </FaEnvelope>
            </a>
          </div>
        </styled.div>
      </SocialNetworks>
    </div>
  </styled.div>
</SideBar>
`;

exports[`<SideBar/> Snapshot renders without crashing using render 1`] = `
Array [
  <div
    class="sc-bqGGPW gKrChu"
  />,
  <div
    class="sc-ksluID fQZLob"
  >
    <div
      class="sc-hBMUJo jfmbmh"
    >
      <a
        class="sc-fujyAs hogkDK"
        href="#home"
      >
        <svg
          fill="currentColor"
          height="32"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M145.14 22.185c9.508 36.595 15.32 71.885 14.22 108.31 21.73 18.495 44.074 28.207 68.035 38.93 11.813 5.288 23.99 10.82 36.37 17.69-24.702-70.606-62.676-117.77-118.626-164.93zM27.122 25.887C24.958 45.21 27.53 71.24 34.12 97.38c6.96 18.72 16.942 37.974 27.595 54.67 15.003 23.516 32.422 42.276 40.48 46.868l-9.27 16.244c-14.91-8.496-31.08-28.122-46.978-53.037-9.383-14.708-18.273-31.144-25.328-47.943v196.584l43.17 1.76c-2.8-23.054-4.248-45.878-2.73-66.516l18.614 1.382c-2.313 31.474 3.16 71.293 9.656 108.65 110.615 90.673 195.362 124.516 260.695 131.175l-95.107-66.8 40.053-15.876L152.44 332.58l38.505-1.738c-28.377-14.028-48.9-32.894-63.144-55.63l1.464-22.964c35.81 41.623 89.82 73.71 151.373 98.096l-43.164 6.068 112.765 52.193-22.39 25.518 119.7 42.32c16.61-5.68 31.058-12.678 43.66-19.464-97.364-69.615-123.58-131.642-168.034-193.962l-.008-.01c-34.93-45.653-68.47-60.9-103.4-76.534-33.725-15.094-68.975-30.612-101.788-72.558L27.123 25.887zm156.344 175.59l89.894 46.75-24.032 17.57c18.66 30.458 55.134 55.834 91.12 72.86-50.826-7.884-103.33-32.248-148.212-69.427l29.815-20.224-38.583-47.53z"
          />
        </svg>
        <strong>
          Israel Deorce
        </strong>
      </a>
      <div
        class="sc-fnVZcZ qHUSy"
      >
        <div
          class="react-toggle toggle"
        >
          <div
            class="react-toggle-track"
          >
            <div
              class="react-toggle-track-check"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 160c-52.9 0-96 43.1-96 96s43.1 96 96 96 96-43.1 96-96-43.1-96-96-96zm246.4 80.5l-94.7-47.3 33.5-100.4c4.5-13.6-8.4-26.5-21.9-21.9l-100.4 33.5-47.4-94.8c-6.4-12.8-24.6-12.8-31 0l-47.3 94.7L92.7 70.8c-13.6-4.5-26.5 8.4-21.9 21.9l33.5 100.4-94.7 47.4c-12.8 6.4-12.8 24.6 0 31l94.7 47.3-33.5 100.5c-4.5 13.6 8.4 26.5 21.9 21.9l100.4-33.5 47.3 94.7c6.4 12.8 24.6 12.8 31 0l47.3-94.7 100.4 33.5c13.6 4.5 26.5-8.4 21.9-21.9l-33.5-100.4 94.7-47.3c13-6.5 13-24.7.2-31.1zm-155.9 106c-49.9 49.9-131.1 49.9-181 0-49.9-49.9-49.9-131.1 0-181 49.9-49.9 131.1-49.9 181 0 49.9 49.9 49.9 131.1 0 181z"
                />
              </svg>
            </div>
            <div
              class="react-toggle-track-x"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M283.211 512c78.962 0 151.079-35.925 198.857-94.792 7.068-8.708-.639-21.43-11.562-19.35-124.203 23.654-238.262-71.576-238.262-196.954 0-72.222 38.662-138.635 101.498-174.394 9.686-5.512 7.25-20.197-3.756-22.23A258.156 258.156 0 0 0 283.211 0c-141.309 0-256 114.511-256 256 0 141.309 114.511 256 256 256z"
                />
              </svg>
            </div>
          </div>
          <div
            class="react-toggle-thumb"
          />
          <input
            class="react-toggle-screenreader-only"
            type="checkbox"
          />
        </div>
        <div
          class="sc-gtsrHT efPasq"
        >
          <div
            class="sc-dlnjwi iDwcvG"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-gKAaRy ilUxeO"
      orientation="vertical"
    >
      <a
        href="#skills"
      >
        button.skills
      </a>
      <a
        href="#experience"
      >
        button.experience
      </a>
      <a
        href="#sec3"
      >
        button.education
      </a>
      <a
        href="#sec4"
      >
        button.contact
      </a>
    </div>
    <div
      class="sc-bdnxRM jJHyKE"
    >
      <button
        class="sc-pNWdM fsllOu"
      >
        <span>
          button.visit_my_blog
        </span>
      </button>
      <button
        class="sc-pNWdM hdQKUA"
      >
        <span>
          button.resume
        </span>
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M339 314.9L175.4 32h161.2l163.6 282.9H339zm-137.5 23.6L120.9 480h310.5L512 338.5H201.5zM154.1 67.4L0 338.5 80.6 480 237 208.8 154.1 67.4z"
          />
        </svg>
      </button>
    </div>
    <div
      class="sc-iCoGMd bRymZA"
    >
      <a
        href="https://wa.me/5551980254545"
        target="_blank"
        title="https://wa.me/5551980254545"
      >
        <svg
          fill="currentColor"
          height="46"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 448 512"
          width="46"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"
          />
        </svg>
      </a>
      <a
        href="https://github.com/IsraelDeorce"
        target="_blank"
        title="https://github.com/IsraelDeorce"
      >
        <svg
          fill="currentColor"
          height="46"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 496 512"
          width="46"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
          />
        </svg>
      </a>
      <a
        href="https://www.linkedin.com/in/israeldeorce"
        target="_blank"
        title="https://www.linkedin.com/in/israeldeorce"
      >
        <svg
          fill="currentColor"
          height="46"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 448 512"
          width="46"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
          />
        </svg>
      </a>
      <a
        href="mailto: israel.idvj@gmail.com"
        target="_blank"
        title="israel.idvj@gmail.com"
      >
        <svg
          fill="currentColor"
          height="46"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="46"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"
          />
        </svg>
      </a>
    </div>
  </div>,
]
`;

exports[`<SideBar/> Snapshot renders without crashing using shallow 1`] = `
<Fragment>
  <styled.div
    onClick={[Function]}
  />
  <styled.div>
    <styled.div>
      <TitledLogo
        onClick={[Function]}
      />
      <styled.div>
        <ThemeToggle />
        <LanguageSelector />
      </styled.div>
    </styled.div>
    <PortfolioLinks
      onClick={[Function]}
      orientation="vertical"
    />
    <ExternalButtons />
    <SocialNetworks />
  </styled.div>
</Fragment>
`;
